--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <base target="_top">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="https://img5.pic.in.th/file/secure-sv1/Logo463bb4b450154ca8.png">
   <title>รับสมัครห้องเรียนพิเศษนิติศาสตร์-รัฐศาสตร์ 2569</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
@@ -328,4 +329,5 @@
     }
   </script>
 </body>
+
 </html>
